all programme with example