@@ -1,6 +1,5 @@
 package java8;
 
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import java.util.stream.Stream;
 
@@ -12,10 +11,10 @@ public class First10OddAndEvenNumber {
         Stream.iterate(1,x->x+2).limit(10).forEach(System.out::println);
 
         var list=IntStream.iterate(0,x->x+2).limit(10)
-                .boxed().collect(Collectors.toList());
+                .boxed().toList();
         System.out.println(list);
         list=IntStream.iterate(1,x->x+2).limit(10)
-                .boxed().collect(Collectors.toList());
+                .boxed().toList();
         System.out.println(list);
 
 
