@@ -8,12 +8,12 @@ import java.util.stream.Collectors;
 public class Test5 {
     public static void main(String[] args) {
         List<Integer> l = Arrays.asList(1,5,10,9,15,25,30,25,10);
-        List<Integer> result =  l.stream().filter(x->x % 5 == 0).collect(Collectors.toList());
+        List<Integer> result =  l.stream().filter(x->x % 5 == 0).toList();
         System.out.println(result);
 
         System.out.println("----------");
         result =  l.stream().map(x->x+"").filter(x->x.endsWith("0")
-        || x.endsWith("5")).map(Integer::valueOf).collect(Collectors.toList());
+        || x.endsWith("5")).map(Integer::valueOf).toList();
         System.out.println(result);
 
         System.out.println("-------");
@@ -22,7 +22,7 @@ public class Test5 {
 
         System.out.println("--------");
         result =  l.stream().collect(Collectors.collectingAndThen(Collectors.toList(),
-                x->x.stream().filter(a->a%5==0).collect(Collectors.toList())));
+                x->x.stream().filter(a->a%5==0).toList()));
         System.out.println(result);
 
 
